--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 jobs/**
 !jobs/**/
 
+#vscode
+.vscode
+
 #uncomment the following line to save next build numbers with config
 #!jobs/**/nextBuildNumber
 
