--- a/jenkins-deployment.yaml
+++ b/jenkins-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: jenkins-dev-pod
-          image: pdaambrosio/jenkinslab:2.6.5
+          image: pdaambrosio/jenkins-lts:1.2.0
           ports:
           -  name: http-port
              containerPort: 8080
