--- a/jenkins-sa.yaml
+++ b/jenkins-sa.yaml
@@ -1,5 +1,11 @@
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: jenkins
+  namespace: jenkins
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: jenkins
